Feat interactuar con contrato
